infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: energix
  labels:
    name: energix
